--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,6 +9,21 @@ svg {
   border: 1px solid rgba(0,0,0,.1);
 }
 
+.main-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 50px;
+}
+
+#team-sidebar {
+  margin-left: 50px;
+  height: 600px;
+  width: 300px;
+  border: 1px solid rgba(0,0,0,.1);
+
+}
+
+
 circle:hover {
   opacity: .3;
 }
