--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,8 +14,9 @@ html {
     rgba(108, 100, 139, .15),
     rgba(0,0,0,0) 7%
     );
+  object-fit: cover;
   height: 100%;
-  width: 100%;
+  
 }
 
 body {
@@ -26,7 +27,7 @@ body {
 }
 
 svg {
-  /* border: 1px solid rgba(0,0,0,.1); */
+  padding: 15px;
 }
 
 #page-header {
@@ -40,14 +41,13 @@ svg {
   margin: 0 50px;
 }
 
-.team-sidebar {
+#team-sidebar {
   margin-left: 50px;
   height: 600px;
   width: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* border: 1px solid rgba(0,0,0,.1); */
 }
 
 #team-sidebar img {
@@ -65,6 +65,46 @@ svg {
   font-size: 25px;
 }
 
+#year-slider {
+  position: absolute;
+  top: 376px;
+  left: -150px;
+  -webkit-appearance: none;
+  -webkit-transition: .2s;
+  width: 420px;
+  height: 15px;
+  background-color: rgba(0,0,0,.4);
+  outline: none;
+  border-radius: 8px;
+  -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+  margin: 10px;
+}
+
+#year-slider:hover {
+  background-color: rgba(0,0,0,.6);
+}
+
+#year-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #FE4119;
+    cursor: pointer;
+}
+
+#year-slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #FE4119;
+    cursor: pointer;
+}
 
 circle:hover {
   opacity: .3;
