--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -21,6 +21,8 @@ body {
 header {
   position: relative;
   width: 30%;
+  height: 100vh;
+  overflow: scroll;
 }
 
 #sidebar-container {
@@ -31,15 +33,48 @@ header {
   align-items: center;
   color: #FFFFFF;
 }
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
+#contact-info {
+  padding: 10px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
 
 header h1 {
-  width: 350px;
+  width: 80%;
 }
 
 header img {
-  height: 357px;
-  width: 433px;
-  transform: scale(.8);
+  height: 150px;
+  width: 182px;
+  /* transform: scale(.5); */
+}
+
+header p {
+  margin-bottom: 20px;
+}
+
+
+#website-link, #linkedin-link, #github-link {
+  font-size: 40px;
+  color: black;
+  z-index: 2;
+}
+
+#website-link:hover, #linkedin-link:hover, #github-link:hover {
+  font-size: 40px;
+  color: rgba(0,0,0,.5);
+}
+
+header p, header li, header ul {
+  width: 90%;
+  font-size: 20px;
+  padding: 5px 0;
 }
 
 
@@ -58,7 +93,7 @@ header img {
 
 svg {
   box-sizing: border-box;
-  position: absolute;
+  position: relative;
   padding: 20px;
   width: 100%;
   height: 100%;
